[project]
name = "py-learn"
version = "0.0.1"
description = "Project to relearn python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=3.2.0,<4.0.0",
    "fastapi[standard]>=0.128.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "scalar-fastapi>=1.5.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
]
